<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/item1"
        android:orderInCategory="100"
        android:title="@string/item1"
        app:showAsAction="never" />
    <item
        android:id="@+id/item2"
        android:orderInCategory="100"
        android:title="@string/item2"
        app:showAsAction="withText" />
    <item
        android:id="@+id/item3"
        android:orderInCategory="100"
        android:title="@string/item3"
        app:showAsAction="withText" />
    <item
        android:id="@+id/item4"
        android:orderInCategory="100"
        android:title="@string/item4"
        app:showAsAction="collapseActionView">
        <menu>
            <item
                android:id="@+id/item4.1"
                android:title="@string/item_4_1" />
            <item
                android:id="@+id/item4.2"
                android:title="@string/item_4_2" />
        </menu>
    </item>
</menu>